--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@tanstack/vue-query": "^5.61.3",
     "@tanstack/vue-query-devtools": "^5.61.3",
+    "@vueuse/core": "^11.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
