--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@vueuse/core": "^11.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
