--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@vueuse/core": "^11.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0",
