--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuetify": "^3.7.13"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
